<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreen"
    android:background="#FFFF"
    >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/welcome"
        android:textColor="#FF2E3E5C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="109dp"
        android:textColor="#FF2E3E5C"
        android:text="@string/please_enter_your_account_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEmailWelcomeScreen"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:cardBackgroundColor="#FFFF"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <ImageView
            android:id="@+id/ivEmail"
            android:contentDescription="@string/email_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/ic_email"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            android:padding="2dp"
            android:textColor="#FF2E3E5C"
            android:layout_marginStart="25dp"
            android:hint="@string/yourmail_mail_com"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPasswordWelcomeScreen"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#FFFF"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvEmailWelcomeScreen">

        <ImageView
            android:id="@+id/ivlock"
            android:contentDescription="@string/password_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_lock"
            android:layout_margin="5dp"

            />

        <EditText
            android:id="@+id/etPassword"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            android:autofillHints="password"
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:ems="10"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:textColor="#FF2E3E5C" />

        <ImageView
            android:id="@+id/ivLockEye"
            android:contentDescription="@string/password_eye"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="272dp"
            android:src="@drawable/ic_eye"

            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textColor="#2E3E5C"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPasswordWelcomeScreen"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginWelcomeScreen"
        />


    <Button
        android:id="@+id/btnLoginWelcomeScreen"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#1FCC79"
        android:text="@string/login"
        android:textColor="#FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPass" />


    <TextView
        android:id="@+id/tvContinueWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/or_continue_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginWelcomeScreen" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvGoogleWelcomeScreen"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:cardCornerRadius="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContinueWith">


        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="#1FCC79"
            android:text="@string/google"
            android:textColor="#FFFF" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/google_logo"
            android:layout_marginStart="75dp"
            android:src="@drawable/google_logo" />


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvGoogleWelcomeScreen"
        >

        <TextView
            android:id="@+id/tvSignUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/don_t_have_any_account"
 />

        <TextView
            android:id="@+id/tvSignUpWelcomeScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="#FF1FCC79"
            android:gravity="center"

            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>