<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingMethod"
    android:background="#FFFF"
    >

    <ImageView
        android:id="@+id/ivBackIconPassRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/go_back_icon"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/tvShoppingMethod"
        app:layout_constraintEnd_toStartOf="@+id/tvShoppingMethod"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvShoppingMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/shopping_method"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivBackIconPassRecovery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

    <LinearLayout
        android:id="@+id/LinearLayoutShoppingMethods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvShoppingMethod">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#FF1FCC79"
                >

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#FFFF"

                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/delivery" />
        </LinearLayout>

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#FFBFBEBE"
            android:layout_marginBottom="10dp"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardCornerRadius="30dp">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/_2"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/address" />
        </LinearLayout>

        <View

            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#FFBFBEBE"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardCornerRadius="30dp">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/_3"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/payment" />
        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStandardDelivery"
        android:layout_width="350dp"
        android:layout_height="108dp"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/LinearLayoutShoppingMethods"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        android:clickable="true"
        app:cardBackgroundColor="#FFFF"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standard_delivery"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rs_100"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="#25A266"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:text="@string/order_will_be_delivered_between_1_2_business_days_in_your_doorstep"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#252424"

            />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvStandardDelivery2"
        android:layout_width="350dp"
        android:layout_height="108dp"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/cvStandardDelivery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        android:clickable="true"
        app:cardBackgroundColor="#FFFF"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast_delivery"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rs_200"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="#25A266"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:text="@string/order_will_be_delivered_on_the_same_day_at_your_doorstep"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#252424"

            />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSignInRecover"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#1FCC79"
        android:text="@string/next"
        android:textColor="#FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvStandardDelivery2" />

</androidx.constraintlayout.widget.ConstraintLayout>