<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingAddress"
    android:background="#FFFF"

    >

    <ImageView
        android:contentDescription="@string/go_back_icon"
        android:id="@+id/ivBackIconPassRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/tvShoppingMethod"
        app:layout_constraintEnd_toStartOf="@+id/tvShoppingMethod"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvShoppingMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/shopping_method"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivBackIconPassRecovery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <LinearLayout
        android:id="@+id/LinearLayoutShoppingAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvShoppingMethod">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#FF1FCC79"
                >

                <ImageView

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:src="@drawable/ic_done"
                    android:padding="10dp"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/delivery" />
        </LinearLayout>

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#FFBFBEBE"
            android:layout_marginBottom="10dp"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#FF1FCC79"
                >

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/_2"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#FFFF"

                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/address" />
        </LinearLayout>

        <View

            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#FFBFBEBE"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:elevation="10dp"
                app:cardCornerRadius="30dp">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/_3"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/payment" />
        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNameShoppingAddress"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutShoppingAddress"
        app:cardBackgroundColor="#FFFF"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >


        <EditText
            android:id="@+id/etNameShoppingAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            android:padding="2dp"
            android:textColor="#FF2E3E5C"

            android:hint="@string/your_name"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEmailBoxShoppingAddress"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvNameShoppingAddress"
        app:cardBackgroundColor="#FFFF"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >



        <EditText
            android:id="@+id/etEmailShoppingAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            android:padding="2dp"
            android:textColor="#FF2E3E5C"
            android:hint="@string/your_mail"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvPhoneShoppingAddress"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvEmailBoxShoppingAddress"
        app:cardBackgroundColor="#FFFF"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >



        <EditText
            android:id="@+id/etPhoneShoppingAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            android:padding="2dp"
            android:textColor="#FF2E3E5C"
            android:hint="@string/your_phone"
            android:inputType="phone"
            android:autofillHints="emailAddress" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAddressShoppingAddress"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPhoneShoppingAddress"
        app:cardBackgroundColor="#FFFF"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >



        <EditText
            android:id="@+id/etAddressShoppingAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            android:padding="2dp"
            android:textColor="#FF2E3E5C"
            android:hint="@string/your_address"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

    </androidx.cardview.widget.CardView>

    <RadioButton
        android:id="@+id/rbSaveDetailsShoppingAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/save_details_for_future_use"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/cvAddressShoppingAddress" />


    <Button
        android:id="@+id/btnNextShoppingAddress"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#1FCC79"
        android:text="@string/next"
        android:textColor="#FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbSaveDetailsShoppingAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>